# orchestrator-core

./: .bumpversion.cfg  .coveragerc  .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  404.html  AGENT_FLOWS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Justfile  LICENSE  NOTICE  README.md  SECURITY.md  codecov.yml  generate.sh  grafana-example.json  index.html  main.py  mkdocs.yml  mutmut_config.py  nitpick-style.toml  objects.inv  pyproject.toml  pyproject.toml.old  renovate.json  report-mypy.xml  setup.cfg  setup.py  sitemap.xml  test_agent.py  vulture_whitelist.py
.claude/: .gitignore
.github/: ISSUE_TEMPLATE.md  copyright.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: README.md  build-push-container.yml  changelog.yml  check-alembic-migrations.yml  check-copyright-header.yml  check-waiting-label.yml  codeql-analysis.yml  codspeed.yml  create-publish-container.yml  gh-pages.yml  issues.yml  publish-package.yml  pull-request.yml  run-acceptance-tests.yml  run-celery-acceptance-tests.yml  run-cli-acceptance-tests.yml  run-codspeed-tests.yml  run-integration-tests.yml  run-linting-tests.yml  run-llm-acceptance-tests.yml  run-llm-integration-tests.yaml.yml  run-llm-integration-tests.yml  run-mkdocs-build.yml  run-pre-commit.yml  run-pytest-celery.yml  run-tests.yml  run-unit-tests.yml  scheduled-build.yml  scheduled-check.yml  slack-notify.yml  uv-lock-report.yml
.windsurf/: rules.md
architecture/application/: openapi.json
architecture/framework/: index.html
architecture/tldr/: index.html
assets/javascripts/: bundle.13a4f30d.min.js  bundle.50899def.min.js  bundle.525ec568.min.js  bundle.79ae519e.min.js  bundle.83f73b43.min.js  bundle.88dd0f4e.min.js  bundle.92b07e13.min.js  bundle.bd41221c.min.js  bundle.c8b220af.min.js  bundle.e71a0d61.min.js  bundle.f1b6f286.min.js  bundle.f55a23d4.min.js  bundle.fe8b6f2b.min.js
contributing/development/: index.html
contributing/guidelines/: index.html
contributing/testing/: index.html
css/: custom.css  markers.css  style.css
demos/: a2a_client.py  a2a_troubleshoot.py  agui_client.py  mcp_client.py
docker/pytest-support/: docker-compose.yaml
docs/: index.md  psycopg3-migration-plan.md
docs-mint/: README.md  docs.json  installation.mdx  introduction.mdx  mint.json  quickstart.mdx
docs-mint/advanced/: deployment.mdx
docs-mint/api-reference/: authentication.mdx  introduction.mdx  openapi.json  swagger.mdx
docs-mint/concepts/: domain-models.mdx  overview.mdx  products.mdx  subscriptions.mdx  workflows.mdx
docs-mint/domain-models/: overview.mdx
docs-mint/examples/: overview.mdx
docs-mint/getting-started/: first-product.mdx  first-workflow.mdx  setup.mdx  ui-setup.mdx
docs-mint/workflows/: creating-workflows.mdx  forms.mdx  overview.mdx  testing.mdx  workflow-steps.mdx
docs/architecture/: framework.md  mcp-auth-architecture.md  tldr.md
docs/contributing/: development.md  documentation.md  guidelines.md  testing.md
docs/css/: style.css
docs/designs/: 1483-enable-ai-workflow-operations.md  parallel-workflow-execution.md
docs/getting-started/: agentic.md  base.md  development.md  docker.md  index.md  orchestration-ui.md  prepare-source-folder.md  versions.md  workflows.md
docs/guides/: generate-config-file.md  pause-and-resume.md  scaling.md  tasks.md  testing.md
docs/migration-guide/: 2.0.md  3.0.md  4.0.md  5.0.md
docs/reference-docs/: ai-search.md  api.md  auth-backend-and-frontend.md  auth.md  cli.md  database.md  forms.md  graphql.md  mcp.md  metrics.md  openapi.json  postgres.md  python.md  scaling.md  search.md  tldr.md  websockets.md
examples/basic/: basic_orchestrator.py
examples/docs/: EXECUTION.md  FORMS.md  README.md  TASKS.md  TESTING.md  WORKFLOW_TYPES.md
getting-started/agentic/: index.html
getting-started/base/: index.html
getting-started/development/: index.html
getting-started/docker/: index.html
getting-started/orchestration-ui/: index.html
getting-started/prepare-source-folder/: index.html
getting-started/versions/: index.html
getting-started/workflows/: index.html
guides/generate-config-file/: index.html
guides/pause-and-resume/: index.html
guides/scaling/: index.html
guides/tasks/: index.html
includes/: abbreviations.md
mcp_poc/: README.MD
mcp_poc/client/: ClientvirgeJsonv3.py
mcp_poc/server/: virgeJson.py
migration-guide/2.0/: index.html
migration-guide/3.0/: index.html
migration-guide/4.0/: index.html
orchestrator/: __init__.py  agentic_app.py  app.py  exception_handlers.py  llm_settings.py  log_config.py  security.py  settings.py  targets.py  tasks.py  types.py  version.py  workflow.py
orchestrator/api/: error_handling.py  helpers.py  models.py
orchestrator/cli/: database.py  generate.md  generate.py  index_llm.py  main.py  migrate_domain_models.py  migrate_tasks.py  migrate_workflows.py  migration_helpers.py  resize_embedding.py  scheduler.py  search_explore.py  speedtest.py
orchestrator/config/: __init__.py  assignee.py  ieee_interface_type.py  ipam.py  settings.py
orchestrator/core/: __init__.py  agent_tags.py  app.py  exception_handlers.py  log_config.py  security.py  settings.py  targets.py  types.py  version.py  workflow.py
orchestrator/db/: __init__.py  database.py  helpers.py  listeners.py  loaders.py  models.py  path_loaders.py  perf_utils.py  sql_models.py
orchestrator/devtools/: populator.py
orchestrator/distlock/: __init__.py  distlock_manager.py
orchestrator/domain/: __init__.py  base.py  config.py  context_cache.py  customer_description.py  helpers.py  lifecycle.py  subscription_instance_transform.py
orchestrator/forms/: __init__.py  network_type_validators.py  scheduler_form.py  validators.py
orchestrator/graphql/: __init__.py  add_graphql.py  authentication.py  autoregistration.py  pagination.py  schema.py  search_inputs.py  types.py
requirements/: all.txt  base.txt  dev.txt  test.txt
scripts/: migrate_pydantic_2x.py
search/: search_index.json
test/: helpers.py
test_orchestrator/: main.py
(+1841 files in other folders)
