# See: https://stackoverflow.com/questions/69711606/how-to-install-a-package-using-pip-in-editable-mode-with-pyproject-toml
[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "orchestrator-core"
dynamic = ['version', 'description']
author = "SURF"
author-email = "automation-beheer@surf.nl"
home-page = "https://github.com/workfloworchestrator/orchestrator-core"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "alembic==1.16.1",
    "anyio>=3.7.0",
    "click==8.*",
    "deprecated",
    "deepmerge==2.0",
    "fastapi~=0.115.2",
    "fastapi-etag==0.4.0",
    "more-itertools~=10.7.0",
    "itsdangerous",
    "Jinja2==3.1.6",
    "orjson==3.10.18",
    "prometheus-client==0.22.0",
    "psycopg2-binary==2.9.10",
    "pydantic[email]~=2.8.2",
    "pydantic-settings~=2.9.1",
    "python-dateutil==2.8.2",
    "python-rapidjson>=1.18,<1.21",
    "pytz==2025.2",
    "redis==5.1.1",
    "schedule==1.1.0",
    "semver==3.0.4",
    "sentry-sdk[fastapi]~=2.29.1",
    "SQLAlchemy==2.0.41",
    "SQLAlchemy-Utils==0.41.2",
    "structlog",
    "typer==0.15.4",
    "uvicorn[standard]~=0.34.0",
    "nwa-stdlib~=1.9.0",
    "oauth2-lib~=2.4.0",
    "tabulate==0.9.0",
    "strawberry-graphql>=0.246.2",
    "pydantic-forms>=1.4.0, <=2.1.0",
]

description-file = "README.md"
requires-python = ">=3.11,<3.14"

[project.urls]
Documentation = "https://workfloworchestrator.org/orchestrator-core/"
Source = "https://github.com/workfloworchestrator/orchestrator-core"

[project.optional-dependencies]
celery = [
    "celery~=5.5.1"
]

test = [
    "apache-license-check",
    "black",
    "blinker",
    "deepdiff",
    "dirty-equals",
    "jsonref",
    "mypy==1.9",
    "pyinstrument",
    "pytest==8.3.5",
    "pytest-asyncio==0.21.2",
    "pytest-codspeed",
    "pytest-cov",
    "pytest-httpx",
    "pytest-xdist",
    "requests-mock",
    "ruff",
    "sqlalchemy[mypy]",
    "urllib3-mock",
    "types-Deprecated",
    "types-Jinja2",
    "types-aiofiles",
    "types-certifi",
    "types-click",
    "types-itsdangerous",
    "types-orjson",
    "types-python-dateutil",
    "types-pytz",
    "types-redis",
    "types-requests",
    "types-setuptools",
    "types-tabulate",
    "types-toml",
    "types-ujson",
    "types-PyYAML",
]
doc = [
    "mkdocs",
    "mkdocs-material[imaging]",
    "mkdocs-render-swagger-plugin",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings[python]",
    "mkdocs-open-in-new-tab",
    "mkdocs-macros-plugin",
    "mkdocs-embed-external-markdown"
]
dev = [
    "toml",
    "bumpversion",
    "mypy_extensions",
    "pre-commit",
    "pydocstyle",
    "python-dotenv",
    "watchdog",
]

[tool.flit.module]
name = "orchestrator"

[tool.black]
line-length = 120
target-version = ["py310"]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | src
    | test/unit_tests/cli/data/generate
    | orchestrator/vendor
  )/
)
'''

[tool.nitpick]
style = [
"github://workfloworchestrator/nitpick-style@main/nitpick-style-orchestrator-core.toml",
"./nitpick-style.toml"
]

[tool.ruff]
exclude = [
    ".git",
    ".cache",
    ".eggs",
    "__pycache__",
    "dist",
    "src",
    "crypt.py",
    "venv",
    ".venv",
    "docs",
    "test/unit_tests/cli/data/generate",
    "orchestrator/vendor",
]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
ignore = [
    "C417",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D202",
    "E501",
    "N806",
    "B905",
    "N805",
    "B904",
    "N803",
    "N801",
    "N815",
    "N802",
]
select = ["B", "C", "D", "E", "F", "I", "N", "RET", "S", "T", "W"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"orchestrator/api/*" = ["B008"]
"orchestrator/cli/*" = ["B008"]
"orchestrator/devtools/scripts/*" = ["S101", "T201"]
"test/*" = ["S101", "B033", "N816", "N802", "T201"]
"orchestrator/__init__.py" = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-third-party = ["pynso", "pydantic"]
known-first-party = [
    "migrations",
    "test",
    "nwastdlib",
    "oauth2_lib",
    "pydantic_forms",
]
