[project]
name = "orchestrator-core"
description = "This is the orchestrator workflow engine."
version = "5.0.0rc2"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "SURF", email = "automation-beheer@surf.nl" }
]
requires-python = ">=3.11,<3.15"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "alembic==1.18.4",
    "anyio>=3.7.0",
    "apscheduler>=3.11.0",
    "click==8.*",
    "deepmerge==2.0",
    "deprecated>=1.2.18",
    "fastapi~=0.136.0",
    "fastapi-etag==0.4.0",
    "itsdangerous>=2.2.0",
    "jinja2==3.1.6",
    "more-itertools~=11.0.1",
    "nwa-stdlib~=1.11.0",
    "oauth2-lib>=2.6.1",
    "orjson==3.11.8",
    "pgvector>=0.4.1",
    "prometheus-client==0.25.0",
    "psycopg[binary]>=3.3.3",
    "pydantic-forms>=2.4.0",
    "pydantic-settings~=2.14.0",
    "pydantic[email]~=2.13.0",
    "python-dateutil==2.9.0.post0",
    "python-rapidjson>=1.23,<1.24",
    "pytz>=2025",
    "redis==7.4.0",
    "semver==3.0.4",
    "sentry-sdk[fastapi]>=2.29.1",
    "sqlalchemy==2.0.49",
    "sqlalchemy-utils==0.42.1",
    "strawberry-graphql>=0.311.3",
    "structlog>=25.4.0",
    "tabulate==0.10.0",
    "typer==0.24.2",
    "uvicorn[standard]~=0.46.0",
    "litellm>=1.80.0",
]

[project.urls]
Documentation = "https://workfloworchestrator.org/orchestrator-core"
Homepage = "https://workfloworchestrator.org/orchestrator-core"
Source = "https://github.com/workfloworchestrator/orchestrator-core"

# Published optional dependencies, or "extras"
[project.optional-dependencies]
celery = [
    "celery~=5.6.0",
]

# Local dependencies for development
[dependency-groups]
docs = [
    "click<=8.3.3",
    "mkdocs>=1.6.1",
    "mkdocs-embed-external-markdown>=3.0.2",
    "mkdocs-include-markdown-plugin>=7.1.6",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material[imaging]>=9.6.14",
    "mkdocs-open-in-new-tab>=1.0.8",
    "mkdocs-redirects>=1.2.2",
    "mkdocs-render-swagger-plugin>=0.1.2",
    "mkdocstrings[python]>=0.29.1",
]
dev = [
    "apache-license-check>=1.0.0",
    "black>=25.1.0",
    "blinker>=1.9.0",
    "bump2version",
    "deepdiff>=8.5.0",
    "dirty-equals>=0.9.0",
    "inline-snapshot>=0.32.4",
    "jsonref>=1.1.0",
    "mypy>=1.19",
    "mypy-extensions>=1.1.0",
    "pre-commit>=4.2.0",
    "pydocstyle>=6.3.0",
    "pyinstrument>=5.0.2",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-celery>=1.2.1",
    "pytest-codspeed>=3.2.0",
    "pytest-cov>=6.2.1",
    "pytest-httpx>=0.29.0",
    "pytest-xdist>=3.7.0",
    "requests-mock>=1.12.1",
    "ruff>=0.12.0",
    "sqlalchemy[mypy]>=2.0.41",
    "toml>=0.10.2",
    "types-aiofiles>=24.1.0.20250606",
    "types-certifi>=2021.10.8.3",
    "types-click>=7.1.8",
    "types-deprecated>=1.2.15.20250304",
    "types-itsdangerous>=1.1.6",
    "types-jinja2>=2.11.9",
    "types-orjson>=3.6.2",
    "types-python-dateutil>=2.9.0.20250516",
    "types-pytz>=2025.2.0.20250516",
    "types-pyyaml>=6.0.12.20250516",
    "types-redis>=4.6.0.20241004",
    "types-requests>=2.32.4.20250611",
    "types-setuptools>=80.9.0.20250529",
    "types-tabulate>=0.9.0.20241207",
    "types-toml>=0.10.8.20240310",
    "types-ujson>=5.10.0.20250326",
    "urllib3-mock>=0.3.3",
    "vulture>=2.16",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[tool.black]
line-length = 120
target-version = ["py310"]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | test/unit_tests/cli/data/generate
    | orchestrator/vendor
  )/
)
'''

[tool.nitpick]
style = [
"github://workfloworchestrator/nitpick-style@main/nitpick-style-orchestrator-core.toml",
"./nitpick-style.toml"
]

[tool.ruff]
exclude = [
    ".git",
    ".cache",
    ".eggs",
    "__pycache__",
    "dist",
    "crypt.py",
    "venv",
    ".venv",
    "docs",
    "test/unit_tests/cli/data/generate",
    "orchestrator/vendor",
]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "C417",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D202",
    "E501",
    "N806",
    "B905",
    "N805",
    "B904",
    "N803",
    "N801",
    "N815",
    "N802",
]
select = ["B", "C", "D", "E", "F", "I", "N", "RET", "S", "T", "W"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"orchestrator/core/__init__.py" = ["I001", "E402"]
"orchestrator/core/api/*" = ["B008"]
"orchestrator/core/cli/*" = ["B008"]
"orchestrator/core/devtools/scripts/*" = ["S101", "T201"]
"orchestrator/core/search/llm_migration.py" = ["S608"]
"test/*" = ["S101", "B033", "N816", "N802", "T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-third-party = ["pynso", "pydantic"]
known-first-party = [
    "migrations",
    "test",
    "nwastdlib",
    "oauth2_lib",
    "pydantic_forms",
]

[tool.uv]
index-url = "https://pypi.org/simple"
override-dependencies = [
    "grpcio==1.76.0",  # Force grpcio 1.76.0 for Python 3.14 wheel support
]

[tool.uv.build-backend]
module-name = "orchestrator.core"
module-root = ""
namespace = true

[tool.pytest]
addopts = [
    "--doctest-modules",
    "--doctest-ignore-import-errors"
]
norecursedirs = [
    ".git",
    "build",
    "dist",
    "*.egg",
    "__pycache__",
    ".cache",
    ".*",
    "migrations",
    "docs",
    "test/unit_tests/cli/data/generate",
]
testpaths = "test/unit_tests orchestrator"
junit_suite_name = "orchestrator"
asyncio_mode = "auto"

# https://docs.python.org/3/library/warnings.html?highlight=warnings#describing-warning-filters
# filterwarnings line syntax is
#   action:message:category:module:line
#
# action	= what to do with the matched warning (default, error, ignore, always, module, once)
# message	= regex for the warning message to match (leave empty to match by category/module)
# category	= full path to warning class to match (leave empty to match by message/module)
# module	= the module for which to match raised warnings (leave empty to match by message/category)
filterwarnings = [
	# TODO #427 ProductBlockModel.name being used as both a ClassVar and a pydantic Field
	'ignore:Field name "name" shadows an attribute in parent.*:UserWarning:pydantic',
	# Third-party warnings we cannot fix
	"ignore:Use the 'sqlalchemy.url'.*:DeprecationWarning:alembic",
	"ignore:.*path_separator.*:DeprecationWarning:alembic",
	"ignore:.*Use 'content=.*:DeprecationWarning:httpx",
	"ignore:.*unclosed.*:ResourceWarning:redis",
	"ignore:.*format_exc_info.*:DeprecationWarning:structlog",
	# Intentional deprecation warning for ProcessStepSchema.executed field
	"ignore:.*executed.*deprecated.*:DeprecationWarning:orchestrator.schemas.process",
	"ignore:.*executed.*deprecated.*:DeprecationWarning:orchestrator.graphql",
]
markers = [
    "workflow: Test that runs a complete workflow (Slow)",
    "acceptance: Acceptance Tests. Needs special handling.",
	"regression: Tests that cover bugs that are fixed to prevent them from regressing",
	"celery: Tests that require celery functionality",
	"search: Tests that require search/indexing functionality",
	"agent: Tests that require agentic functionality and the agent extra dependencies",
	"noresponses: Skip HTTP response mocking for this test (use with caution)",
]

[tool.mypy]
exclude = "(venv|test/unit_tests/cli/data/generate|orchestrator/core/vendor|vulture_whitelist.py)"
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
# check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
namespace_packages = true
warn_unused_ignores = true
warn_redundant_casts = true
# Disable due to flaky results in mypy itself
# warn_return_any = true
warn_no_return = true
warn_unreachable = true
implicit_reexport = false
strict_equality = true
show_error_codes = true
show_column_numbers = true
# lineprecision_report = mypy-coverage
plugins = [
    "pydantic.mypy",
    "strawberry.ext.mypy_plugin",
]
# Suppress "note: By default the bodies of untyped functions are not checked"
disable_error_code = "annotation-unchecked"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = "orchestrator.app"
# Has some nwastdlib untyped stuff
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "test"
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
